Minor update in index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
     <div class="main-page">
 
-
-
         <!--Navigation Bar-->
         <div class="main-navbar">
             <a class="active" href="index.html">Home</a>
@@ -30,60 +28,57 @@
         <!--Page Header-->
         <div class="main-header">
             <img src="images/header/ucc-college.jpg">
-            <h1>Chinese PhD Forum in Ireland 2023</h1>
+            <h1>中爱博士论坛2023 <br/>
+                Chinese PhD Forum in Ireland 2023</h1>
         </div>
 
 
+        <!--Introduction-->
+        <div class="main-body">
 
-
-
-
-        <div class="row">
-            <div class="column side">
+            <div class="Introduction">
+                <h2 style="text-align: center;">Welcome to The 2nd Chinese PhD Forum in Ireland</h2>
+                <p>
+                    欢迎参加由我们(UCC)主办的中国博士生论坛，该论坛将在爱尔兰举行。
+                    本次论坛旨在为在爱尔兰的中国博士生提供一个交流和合作的平台，促进他们之间的学术互动和知识分享。
+                </p>
+                <p>
+                    本论坛将聚集来自不同学科领域的中国博士生，包括但不限于自然科学、工程技术、医学和社会科学等。
+                    论坛的主要目标是鼓励博士生们展示自己的研究成果，并与其他同行进行深入的学术讨论。
+                    我们将邀请一些在相关领域有丰富经验的专家学者作为演讲嘉宾，分享他们的研究成果和学术见解。
+                </p>
+                <p>
+                    此外，我们还将组织学术研讨会、小组讨论和网络交流等活动，以提供更多机会让参与者们相互交流、建立合作关系和拓展专业网络。
+                    这个论坛将为在爱尔兰的中国博士生们提供一个展示自己研究工作的平台，同时也有助于加强他们的学术能力和职业发展。
+                    我们热忱欢迎所有对中国博士生研究领域感兴趣的人士参加此次盛会。
+                    如有任何问题或者想了解更多信息，请随时与我们联系。期待与您在论坛上见面！
+                </p>
             </div>
 
-            <div class="column middle">
-                <div class="Introduction">
-                    <h2 style="text-align: center;">Welcome to The 2nd Chinese PhD Forum in Ireland</h2>
-                </div>
+            <div class="separator"></div>
+
+            <div class="Call4Paper">
+                <h3 style="text-align: center;">Paper Submission</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-
-                <div class="separator"></div>
-
-                <div class="Call4Paper">
-                    <h3 style="text-align: center;">Paper Submission</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-
-                </div>
-
-
-                <div class="separator"></div>
-
-                <div class="Forum Location">
-                    <h3 style="text-align: center;">Forum Location</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-
-                </div>
-
-                <div class="separator"></div>
-
-                <div class="Sponsor">
-                    <h3 style="text-align: center;">Sponsors</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-
-                </div>
 
             </div>
 
 
+            <div class="separator"></div>
 
-            
+            <div class="Forum Location">
+                <h3 style="text-align: center;">Forum Location</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
 
+            </div>
+
+            <div class="separator"></div>
+
+            <div class="Sponsor">
+                <h3 style="text-align: center;">Sponsors</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+
+            </div>
 
         </div>
    
