--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
                 <h2 style="text-align: center;">
                     Welcome to The 2nd Chinese PhD Forum in Ireland<br/>
                 </h2>
+                <p style="text-align:center;color: navy;">
+                    <strong> <font size="+0.5">
+                        欢迎参加由我们（University College Cork）主办的第二届中爱博士生论坛。
+                    </font></strong>
+                </p>
                 <p>
-                    欢迎参加由我们（University College Cork）主办的第二届中爱博士生论坛。本届论坛将在爱尔兰科克大学举行。
+                    本届论坛将在爱尔兰科克大学举行。
                     中爱博士论坛旨在为在爱尔兰的中国博士生提供一个交流和合作的平台，促进他们之间的学术互动和知识分享。
                 </p>
                 <p>
-                    本论坛将聚集来自不同学科领域的中国博士生，包括但不限于自然科学、工程技术、医学和社会科学等。
+                    本论坛将聚集来自不同学科领域的中国博士生，包括但不限于自然科学、工程技术、医学、物理、化学及社会科学等。
                     论坛的主要目标是鼓励博士生们展示自己的研究成果，并与其他同行进行深入的学术讨论。
                     我们将邀请一些在相关领域有丰富经验的专家学者作为演讲嘉宾，分享他们的研究成果和学术见解。
                 </p>
@@ -81,6 +86,9 @@
                     <h3 style="text-align: center;">Scopes</h3>
                     <p>
                         人文科学，法律，商业，数学，医学，工程，材料，物理，计算机，其它。
+                    </p>
+                    <p>
+                        联系方式：phdinireland@gmail.com
                     </p>
                 </div>
 
@@ -108,7 +116,7 @@
                             </tr>
                             <tr>
                                 <td>孙丹（QUB-复合材料）</td>
-                                <td>文双文及全爱学联</td>
+                                <td>文双文，以及全爱学联</td>
                             </tr>
                         </table>
                         <p>
@@ -134,7 +142,7 @@
                     <h3 style="text-align: center;">摘要格式</h3>
                     <p>
                         需要提交1页A4中英文双语摘要，包括题目和作者。
-                        要求：11号Calibre字体，单行。
+                        要求：11号Calibri字体，单行。
                         研究内容可以是已经发表过的，但仅限于一个图片。
                         没有字数限制，但是中英文摘要不超过一页。页边距不小于2厘米。
                     </p>
