--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 <div id="Scopes", class="Scopes">
                     <h3 style="text-align: center;">Scopes</h3>
                     <p>
-                        人文科学，法律，商业，数学，医学，工程，材料，物理，计算机，其它。
+                        <strong>选择学科方向：</strong>人文科学，法律，商业，数学，医学，工程，材料，物理，计算机，其它。
                     </p>
                     <p>
-                        联系方式：phdinireland@gmail.com
+                        联系方式：<a href="mailto: phdinireland@gmail.com">phdinireland@gmail.com</a>
                     </p>
                 </div>
 
@@ -127,10 +127,11 @@
     
                 <div class="separator"></div>
 
-                <div class="Program">
-                    <h2 style="text-align: center;"> Program (TBC) </h2>
+                <div class="Program", style="color: red">
+                    <h2 style="text-align: center"> Program (TBC) </h2>
+                    <p><center><strong>待确定</strong></center></p>
                     <h3 style="text-align: center;">Forum Location</h3>
-                    <p>Saturday 4th & Sunday 5th Nov 2023 at UCC</p>
+                    <p><center><strong>UCC</strong></center></p>
                 </div>
     
                 <div class="separator"></div>
