Change the header and navbar

--- a/index.html
+++ b/index.html
@@ -11,31 +11,23 @@
 
 
 
+<header>
+    <!--Navigation Bar-->
+    <div class="main-navbar">
+        <a href="index.html">Home</a>
+        <a href="index.html">Call4Paper</a>
+        <a href="index.html#Committees">Committees</a>
+        <a href="index.html#Program">Program</a>
+        <a href="index.html#Submission">Submission</a>
+        <a href="photos">PHOTO</a>
+    </div>
+</header>
+
 <body>
 
 
-    <div class="home-header-container">
-
-
-
-    </div>
-
-      
     <div class="home-body-container">
 
-        <!--Navigation Bar-->
-        <div class="main-navbar">
-            <a href="index.html">Home</a>
-            <a href="index.html">Call4Paper</a>
-            <a href="index.html#Committees">Committees</a>
-            <a href="index.html#Program">Program</a>
-            <a href="index.html#Submission">Submission</a>
-            <a href="photos">PHOTO</a>
-        </div>
-
-        <div>
-
-        </div>
         
         <!--Page Header-->
         <div class="main-header">
