--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 
 <header>
+
+
     <!--Navigation Bar-->
     <div class="main-navbar">
         <a href="index.html">Home</a>
@@ -21,6 +23,20 @@
         <a href="index.html#Submission">Submission</a>
         <a href="photos">PHOTO</a>
     </div>
+
+
+
+    <div class="main-header">
+        <img src="images/header/ucc-college.jpg">
+        <h1>
+            第二届中爱博士论坛（2023）<br/>
+            The 2nd Chinese PhD Forum in Ireland 2023
+        </h1>
+        <h3>
+            Saturday 4th & Sunday 5th Nov 2023 at UCC
+        </h3>
+    </div>
+
 </header>
 
 <body>
@@ -30,16 +46,6 @@
 
         
         <!--Page Header-->
-        <div class="main-header">
-            <img src="images/header/ucc-college.jpg">
-            <h1>
-                第二届中爱博士论坛（2023）<br/>
-                The 2nd Chinese PhD Forum in Ireland 2023<br/>
-            </h1>
-            <h3>
-                Saturday 4th & Sunday 5th Nov 2023 at UCC
-            </h3>
-        </div>
 
         <!--Introduction-->
         <div class="main-body">
@@ -78,9 +84,6 @@
                     <h3 style="text-align: center;">Scopes</h3>
                     <p>
                         <strong>选择学科方向：</strong>人文科学，法律，商业，数学，医学，工程，材料，物理，计算机，其它。
-                    </p>
-                    <p>
-                        联系方式：<a href="mailto: phdinireland@gmail.com">phdinireland@gmail.com</a>
                     </p>
                 </div>
 
@@ -134,13 +137,28 @@
 
                     <h3 style="text-align: center;">摘要格式</h3>
                     <p>
-                        需要提交1页A4中英文双语摘要，包括题目和作者。
-                        要求：11号Calibri字体，单行。
+                        需要提交中英文双语摘要，包括题目，作者及作者单位信息。
+                    </p>
+                    <p>
+                        摘要要求：字体Calibri字体，单行，页边距不小于2厘米。
+                        <br/>
                         研究内容可以是已经发表过的，但仅限于一个图片。
-                        没有字数限制，但是中英文摘要不超过一页。页边距不小于2厘米。
+                        没有字数限制，但是中英文摘要不超过两页，且只接受.pdf文件。
+                        <br/>
+                        摘要文件命名方式：
+                        <br/>
+                        FirstName_FamilyName_UniversityAbbreviation_[OneKeyword].pdf
+                        <br/>
+                        如：John_Smith_UCD_NovelMaterial.pdf
                     </p>
                     <p>
                         模板下载：<a href="resources/template/word_template.docx">word_template.docx</a>
+                    </p>
+                    <p>
+                        论坛报名：
+                    </p>
+                    <p>
+                        如有任何问题，请直接联系：<a href="mailto: phdinireland@gmail.com">phdinireland@gmail.com</a>
                     </p>
                 </div>
     
