Update index.html with abstraction submission

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         模板下载：<a href="resource/template/word_template.docx">word_template.docx</a>
                     </p>
                     <p>
-                        论坛报名：
+                        论坛报名：<a href="https://forms.gle/mA913pogAtSfq1p29">Google Form摘要提交</a>
                     </p>
                     <p>
                         如有任何问题，请直接联系：<a href="mailto: phdinireland@gmail.com">phdinireland@gmail.com</a>
