Add Lizili into Committee

--- a/index.html
+++ b/index.html
@@ -99,18 +99,21 @@
                             </tr>
                             <tr>
                                 <td>黄健（UCC-数学）</td>
+                                <td>李孜理-UCC(土木工程)</td>
+                            </tr>
+                            <tr>
                                 <td>何秀芸（Tyndall-光电封装）</td>
-                            </tr>
-                            <tr>
                                 <td>郭艳瑜（UCC-语言学）</td>
+                            </tr>
+                            <tr>
                                 <td>朱绍明（UCC-法律）</td>
-                            </tr>
-                            <tr>
                                 <td>李智（Tyndall-半导体器件/材料/物理）</td>
-                                <td>欧阳兴（Tyndall-光学与电子工程/通信）</td>
                             </tr>
                             <tr>
+                                <td>欧阳兴（Tyndall-光学与电子工程/通信）</td>
                                 <td>孙丹（QUB-复合材料）</td>
+                            </tr>
+                            <tr>
                                 <td>文双文，以及全爱学联</td>
                             </tr>
                         </table>
