--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/logo/ucc-icon.png"/>
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 
@@ -18,6 +18,7 @@
     <div class="main-navbar">
         <a href="index.html">Home</a>
         <a href="index.html">Call4Paper</a>
+        <a href="index.html">Plenary&#38Invited Talks</a>
         <a href="index.html#Committees">Committees</a>
         <a href="index.html#Program">Program</a>
         <a href="index.html#Submission">Submission</a>
@@ -86,6 +87,68 @@
                         <strong>选择学科方向：</strong>人文科学，法律，商业，数学，医学，工程，材料，物理，计算机，其它。
                     </p>
                 </div>
+
+                <div class="separator"></div>
+
+                <div id="Plenary&Invited", class="Plenary&Invited">
+                    <h2 style="text-align: center;">Planery & Invited Speakers</h2>
+
+                    <table class="Plenary-Table">
+                        <tr>
+                            <td colspan="2">
+                                <h3 style="text-align: center;">Plenary Speakers:</h3>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="material-symbols-outlined">
+                                    person
+                                </span>
+                            </td>
+                            <td>
+                                <span class="material-symbols-outlined">
+                                    person
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>吴兵教授（TU Dublin）</td>
+                            <td>金岩教授 (QUB)</td>
+                        </tr>
+                        <tr>
+                            <td>Brief Intro</td>
+                            <td>Brief Intro</td>
+                        </tr>
+
+
+                        <tr>
+                            <td colspan="2">
+                                <h3 style="text-align: center;">Invited Speakers:</h3>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="material-symbols-outlined">
+                                    person
+                                </span>
+                            </td>
+                            <td>
+                                <span class="material-symbols-outlined">
+                                    person
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>钱丽娟教授 (UCC, ERC Awardee)</td>
+                            <td>邱方哲教授 (UCD, ERC Awardee) </td>
+                        </tr>
+                        <tr>
+                            <td>Brief Intro</td>
+                            <td>Brief Intro</td>
+                        </tr>
+                    </table>
+                </div>
+
 
                 <div class="separator"></div>
 
