Update deadline for submission

--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                     <h2 style="text-align: center;">Paper Submission</h2>
 
                     <h3 style="text-align: center;">摘要格式</h3>
+                    <p style="text-align: center; color:red">
+                        <strong>*截至日期：9月20号</strong>
                     <p>
                         需要提交中英文双语摘要，包括题目，作者及作者单位信息。
                     </p>
