Add bookmark for plenary&invited section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-navbar">
         <a href="index.html">Home</a>
         <a href="index.html">Call4Paper</a>
-        <a href="index.html">Plenary&#38Invited Talks</a>
+        <a href="index.html#Plenary&Invited">Plenary&#38Invited Talks</a>
         <a href="index.html#Committees">Committees</a>
         <a href="index.html#Program">Program</a>
         <a href="index.html#Submission">Submission</a>
