Update Subsidy Information

--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
                         <br/>
                         如：John_Smith_UCD_NovelMaterial.pdf
                     </p>
+
+                    <h3 style="text-align: center;">差旅补助</h3>
+                    <p>
+                        本次论坛除了优秀论文奖，还将提供差旅补助以资助非Cork地区的学生参加论坛，具体补助标准待定。
+                        <li>非科克地区的博士生可以申请部分经费补助差旅。</li>
+                        <li>请写明具体真实理由（比如研究组没有相应研究经费资助）。</li>
+                        <li>因为经费有限，补助根据投稿质量、投稿先后顺序、参会人情况等因素综合决定。</li>
+                        <li>如果课题组已经有经费支持参加本次博士论坛，原则上不给予补助。</li>
+                    </p>
+
+
                     <p>
                         模板下载：<a href="resource/template/word_template.docx">word_template.docx</a>
                     </p>
