Change the title of the forum

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main-header">
         <img src="images/header/ucc-college.jpg">
         <h1>
-            第二届中爱博士论坛（2023）<br/>
+            第二届爱中博士论坛（2023）<br/>
             The 2nd Chinese PhD Forum in Ireland 2023
         </h1>
         <h3>
@@ -57,12 +57,12 @@
                 </h2>
                 <p style="text-align:center;color: navy;">
                     <strong> <font size="+0.5">
-                        欢迎参加由我们（University College Cork）主办的第二届中爱博士生论坛。
+                        欢迎参加由我们（University College Cork）主办的第二届爱中博士生论坛。
                     </font></strong>
                 </p>
                 <p>
                     本届论坛将在爱尔兰科克大学举行。
-                    中爱博士论坛旨在为在爱尔兰的中国博士生提供一个交流和合作的平台，促进他们之间的学术互动和知识分享。
+                    爱中博士论坛旨在为在爱尔兰的中国博士生提供一个交流和合作的平台，促进他们之间的学术互动和知识分享。
                 </p>
                 <p>
                     本论坛将聚集来自不同学科领域的中国博士生，包括但不限于自然科学、工程技术、医学、物理、化学及社会科学等。
