Change the English title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="images/header/ucc-college.jpg">
         <h1>
             第二届爱中博士论坛（2023）<br/>
-            The 2nd Chinese PhD Forum in Ireland 2023
+            The 2nd Forum for Chinese PhD in Ireland 2023
         </h1>
         <h3>
             Saturday 4th & Sunday 5th Nov 2023 at UCC
@@ -53,7 +53,7 @@
 
             <div id="Welcome", class="Welcome">
                 <h2 style="text-align: center;">
-                    Welcome to The 2nd Chinese PhD Forum in Ireland<br/>
+                    Welcome to The 2nd Forum for Chinese PhD in Ireland<br/>
                 </h2>
                 <p style="text-align:center;color: navy;">
                     <strong> <font size="+0.5">
