--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Chinese PhD Forum in Ireland 2023</title>
+    <title>Chinese PhD Students Forum in Ireland 2023</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -30,8 +30,8 @@
     <div class="main-header">
         <img src="images/header/ucc-college.jpg">
         <h1>
-            第二届爱中博士论坛（2023）<br/>
-            The 2nd Forum for Chinese PhD in Ireland 2023
+            第二届爱中博士生论坛（2023）<br/>
+            The 2nd Forum for Chinese PhD Students in Ireland 2023
         </h1>
         <h3>
             Saturday 4th & Sunday 5th Nov 2023 at UCC
@@ -53,7 +53,7 @@
 
             <div id="Welcome", class="Welcome">
                 <h2 style="text-align: center;">
-                    Welcome to The 2nd Forum for Chinese PhD in Ireland<br/>
+                    Welcome to The 2nd Forum for Chinese PhD Students in Ireland<br/>
                 </h2>
                 <p style="text-align:center;color: navy;">
                     <strong> <font size="+0.5">
@@ -62,7 +62,7 @@
                 </p>
                 <p>
                     本届论坛将在爱尔兰科克大学举行。
-                    爱中博士论坛旨在为在爱尔兰的中国博士生提供一个交流和合作的平台，促进他们之间的学术互动和知识分享。
+                    爱中博士生论坛旨在为在爱尔兰的中国博士生提供一个交流和合作的平台，促进他们之间的学术互动和知识分享。
                 </p>
                 <p>
                     本论坛将聚集来自不同学科领域的中国博士生，包括但不限于自然科学、工程技术、医学、物理、化学及社会科学等。
