--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="separator"></div>
 
                 <div id="Plenary&Invited", class="Plenary&Invited">
-                    <h2 style="text-align: center;">Planery & Invited Speakers</h2>
+                    <h2 style="text-align: center;">Plenary & Invited Speakers</h2>
 
                     <table class="Plenary-Table">
                         <tr>
