--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                     <h3 style="text-align: center;">摘要格式</h3>
                     <p style="text-align: center; color:red">
-                        <strong>*截至日期：9月20号</strong>
+                        <strong>*截至日期：2023年9月20号</strong>
                     <p>
                         需要提交中英文双语摘要，包括题目，作者及作者单位信息。
                     </p>
